# foyer

./: .editorconfig  .gitignore  .prettierignore  AGENTS.md  Cargo.toml  README.md  SPEC.md  TODO.md  package.json
.devcontainer/: devcontainer.json
.github/workflows/: test.yml
apps/foyer/: index.html  package.json  tsconfig.json  vite.config.ts
apps/foyer/src/: App.tsx  main.tsx
apps/foyer/src-tauri/: Cargo.toml  tauri.conf.json
apps/foyer/src-tauri/capabilities/: default.json  mobile.json
apps/foyer/src-tauri/src/: db.rs  lib.rs  main.rs
apps/foyer/src/screens/: Foyer.tsx
apps/foyer/src/services/: CaptureService.ts
apps/foyer/src/theme/: theme.ts
docs/: README.md
docs/architecture/: architecture.md  build-and-ci.md  intelligence-and-rag.md  notification-capture.md
docs/design/: calm-contract.md
docs/plugins/: notification-listener.md
plugins/notification-listener/: Cargo.toml  README.md  build.rs  package.json  rollup.config.js
plugins/notification-listener/android/: .gitignore  build.gradle.kts  proguard-rules.pro
plugins/notification-listener/android/src/main/: AndroidManifest.xml
plugins/notification-listener/android/src/main/java/com/plugin/notificationlistener/: FoyerNotificationListenerService.kt  NotificationListenerPlugin.kt
plugins/notification-listener/guest-js/: index.ts
plugins/notification-listener/permissions/: default.toml
plugins/notification-listener/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
