[package]
name = "tauri-plugin-notification-listener"
version = "0.1.0"
authors = ["Liminal HQ, Scott Morris"]
edition = "2021"
rust-version = "1.77.2"
description = "Bridges Android NotificationListenerService into Tauri as the universal capture sensor"
links = "tauri-plugin-notification-listener"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[build-dependencies]
tauri-plugin = { version = "2.0.0", features = ["build"] }

[features]
default = []
